[iOS] LowPowerModeNotifier notifies client on non-main thread https://bugs.webkit.org/show_bug.cgi?id=173115 <rdar://problem/32644703>

Reviewed by Ryosuke Niwa.

Update iOS's implementation of the LowPowerModeNotifier to make sure
we notify the client of low power mode changes on the main thread.

* platform/ios/LowPowerModeNotifierIOS.mm:
(-[WebLowPowerModeObserver _didReceiveLowPowerModeChange]):


Canonical link: https://commits.webkit.org/189983@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@217959 268f45cc-cd09-0410-ab3c-d52691b4dbfc